# python-arkfunds

./: .flake8  .gitignore  pyproject.toml
arkfunds/: arkfunds.py  etf.py  stock.py
docs/: conf.py
tests/: test_stock.py
