[tool.poetry]
name = "arkfunds"
version = "1.0.0"
description = "Python library for monitoring Ark Invest funds data."
repository = "https://github.com/frefrik/arkfunds-python"
readme = "README.rst"
keywords = ["ark", "ark invest", "ark funds", "etf", "funds", "finance"]
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
packages = [
    { include = "arkfunds" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.1"

Sphinx = { version = "^7.2.6", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx_rtd_theme"]

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
